--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "office_tracking" "\0"
+            VALUE "CompanyName", "com.workday" "\0"
+            VALUE "FileDescription", "office_tracker" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "office_tracking" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "office_tracking.exe" "\0"
-            VALUE "ProductName", "office_tracking" "\0"
+            VALUE "InternalName", "office_tracker" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.workday. All rights reserved." "\0"
+            VALUE "OriginalFilename", "office_tracker.exe" "\0"
+            VALUE "ProductName", "office_tracker" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
