--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.20.2
+  logger: ^2.6.2
   location: ^8.0.1
   flutter_local_notifications: ^19.5.0
 
