--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,6 +28,8 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSLocationUsageDescription</key>
+    <string>This app needs access to location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
     <string>The app needs the location</string>
     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
