--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   logger: ^2.6.2
-  location: ^8.0.1
+  geolocator: ^14.0.2
   flutter_local_notifications: ^19.5.0
 
   # The following adds the Cupertino Icons font to your application.
