--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.20.2
-  logger: ^2.6.2
-  geolocator: ^14.0.2
-  flutter_local_notifications: ^19.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  intl: ^0.20.2
+  logger: ^2.6.2
+  geolocator: ^14.0.2
+  flutter_local_notifications: ^19.5.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
