--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   geolocator: ^14.0.2
   flutter_local_notifications: ^19.5.0
   shared_preferences: ^2.5.3
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
