--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   shared_preferences: ^2.5.3
   dropdown_search: ^6.0.2
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
