--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = office_tracker
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.workday.officeTracker
+PRODUCT_BUNDLE_IDENTIFIER = br.com.fmolina.officeTracker
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.workday. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 br.com.fmolina. All rights reserved.
