--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,9 +29,9 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The app needs the location</string>
+	<string>The app needs the location to record when you enter or exit the office, no location is stored or shared</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>The app needs the location</string>
+	<string>The app needs the location to record when you enter or exit the office, no location is stored or shared</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>processing</string>
