--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: office_tracker
-description: "A new Flutter project."
+description: "Track which days you were at the office"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -37,11 +37,13 @@ dependencies:
 
   intl: ^0.20.2
   logger: ^2.6.2
-  geolocator: ^14.0.2
   flutter_local_notifications: ^19.5.0
   shared_preferences: ^2.5.3
   dropdown_search: ^6.0.2
   flutter_bloc: ^9.1.1
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
+  native_geofence: ^1.2.0
 
 dev_dependencies:
   flutter_test:
