--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <application
         android:label="Office Tracker"
         android:name="${applicationName}"
@@ -38,25 +42,11 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-        <!-- Used by plugin: native_geofence -->
-        <receiver android:name="com.chunkytofustudios.native_geofence.receivers.NativeGeofenceBroadcastReceiver"
-            android:exported="true"/>
-        <receiver android:name="com.chunkytofustudios.native_geofence.receivers.NativeGeofenceRebootBroadcastReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-            </intent-filter>
-        </receiver>
-        <service android:name="com.chunkytofustudios.native_geofence.NativeGeofenceForegroundService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:foregroundServiceType="location"
-            android:exported="true"/>
-
-        <!-- Used by plugin: flutter_geolocator
-        <service android:name="com.baseflow.geolocator.GeolocatorLocationService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:foregroundServiceType="location"
-            android:exported="true"/> -->
+        <!-- Used by flutter_foreground_task -->
+        <service
+            android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
+            android:foregroundServiceType="dataSync|remoteMessaging|location"
+            android:exported="false" />
 
         <!-- Used by plugin: flutter_local_notifications -->
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver" />
