--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   intl: ^0.20.2
   logger: ^2.6.2
   flutter_local_notifications: ^19.5.0
-  shared_preferences: ^2.5.3
+  shared_preferences: ^2.5.4
   dropdown_search: ^6.0.2
   flutter_bloc: ^9.1.1
   permission_handler: ^12.0.1
   geolocator: ^14.0.2
-  native_geofence: ^1.2.0
+  flutter_foreground_task: ^9.2.0
 
 dev_dependencies:
   flutter_test:
